// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the base component correctly 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        as="button"
        href="http://www.non_default_url.com"
        iconPlacement="start"
        linkRef={[Function]}
        variant="default"
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        text="Missing"
        variant="danger"
      />
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <div
      className="Opportunity-styles__points"
    >
      <ScreenReaderContent
        as="span"
      >
        20 points
      </ScreenReaderContent>
      <PresentationContent
        as="span"
      >
        <span
          className="Opportunity-styles__pointsNumber"
        >
          20
        </span>
        points
      </PresentationContent>
    </div>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <Button
      as="button"
      buttonRef={[Function]}
      cursor="pointer"
      fluidWidth={false}
      icon={[Function]}
      margin="0"
      onClick={[Function]}
      size="small"
      title="Dismiss this is a description about the opportunity"
      type="button"
      variant="icon"
    >
      <ScreenReaderContent
        as="span"
      >
        Dismiss this is a description about the opportunity
      </ScreenReaderContent>
    </Button>
  </div>
</div>
`;

exports[`renders the base component correctly with 0 points 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        as="button"
        href="http://www.non_default_url.com"
        iconPlacement="start"
        linkRef={[Function]}
        variant="default"
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        text="Missing"
        variant="danger"
      />
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <div
      className="Opportunity-styles__points"
    >
      <ScreenReaderContent
        as="span"
      >
        0 points
      </ScreenReaderContent>
      <PresentationContent
        as="span"
      >
        <span
          className="Opportunity-styles__pointsNumber"
        >
          0
        </span>
        points
      </PresentationContent>
    </div>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <Button
      as="button"
      buttonRef={[Function]}
      cursor="pointer"
      fluidWidth={false}
      icon={[Function]}
      margin="0"
      onClick={[Function]}
      size="small"
      title="Dismiss this is a description about the opportunity"
      type="button"
      variant="icon"
    >
      <ScreenReaderContent
        as="span"
      >
        Dismiss this is a description about the opportunity
      </ScreenReaderContent>
    </Button>
  </div>
</div>
`;

exports[`renders the base component correctly without points 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        as="button"
        href="http://www.non_default_url.com"
        iconPlacement="start"
        linkRef={[Function]}
        variant="default"
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        text="Missing"
        variant="danger"
      />
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <ScreenReaderContent
      as="span"
    >
      There are no points associated with this item
    </ScreenReaderContent>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <Button
      as="button"
      buttonRef={[Function]}
      cursor="pointer"
      fluidWidth={false}
      icon={[Function]}
      margin="0"
      onClick={[Function]}
      size="small"
      title="Dismiss this is a description about the opportunity"
      type="button"
      variant="icon"
    >
      <ScreenReaderContent
        as="span"
      >
        Dismiss this is a description about the opportunity
      </ScreenReaderContent>
    </Button>
  </div>
</div>
`;
